add task-bound cycle count execution
